...
                </View>
              )}
            </Pressable>
          );
        })}
        <IconButton
          testID="btn-add-group"
          accessibilityLabel={t("groups.addGroup")}
          onPress={onAdd}
          icon={
            <View
              style={{
                width: 32,
...
