...
    );
  } else if (isRegular) {
    body = <CenteredColumn>{listColumn}</CenteredColumn>;
  }

  return (
    <Screen testID="screen-direct" aboveTabBar wide>
      {body}
    </Screen>
  );
}

export default observer(Direct);
...
